src/test/deca/syntax/valid/created/parser/WithoutObjectExpressions/include/print/include_print.deca
// Description:
//    tests de programme syntaxiquement correct.
//    wrong #include
//
// Resultats:
//    ok


#include "print_1.decah"
#include "print_2.decah"