src/test/deca/syntax/invalid/created/lexer/include/wrong/include2.deca
// Description:
//    tests de programme lexicalement correct.
//    wrong #include
//
// Resultats:
//    include1.deca:9:0: token recognition error at: '#include n'


#include null